--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>Camera Alert</span>
+  
+      <span class="example-spacer"></span>
+      
+      <button mat-button>About</button>
+      <button mat-button>Services</button>
+      <button mat-button>Contact</button>
+    </mat-toolbar-row>
+  </mat-toolbar>
 <router-outlet></router-outlet>
