--- a/src/app/camera/camera.component.html
+++ b/src/app/camera/camera.component.html
@@ -1,21 +1,25 @@
 <div class="container">
   <h1>Camera List</h1>
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Files</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let camera of cameras">
-        <td>{{ camera.Id }}</td>
-        <td>{{ camera.Name }}</td>
-        <td>{{ camera.Files }}</td>
-        <td><button class="btn btn-small btn-success" (click)="showFiles(camera.Id)" type="button">Show Files</button></td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="mat-elevation-z8">
+  <mat-table #table [dataSource]="cameras">
+      <ng-container matColumnDef="Id">
+          <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+          <mat-cell *matCellDef="let camera"> {{camera.Id}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Name">
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let camera"> {{camera.Name}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Files">
+            <mat-header-cell *matHeaderCellDef> Files </mat-header-cell>
+            <mat-cell *matCellDef="let camera"> {{camera.Files}} </mat-cell>
+      </ng-container>
+      <ng-container matColumnDef="Action">
+          <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+          <mat-cell *matCellDef="let camera"><button class="btn btn-small btn-success" (click)="showFiles(camera.Id)" type="button">Show Files</button> </mat-cell>
+       </ng-container>
+       <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+      <mat-row *matRowDef="let camera; columns: displayedColumns;"></mat-row>
+  </mat-table>        
+</div>
 </div>
