--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
       <span class="example-spacer"></span>
       
       <button mat-button>About</button>
-      <button mat-button>Services</button>
+      <button mat-button (click)="showLiveVideo()">Live</button>
       <button mat-button>Contact</button>
     </mat-toolbar-row>
   </mat-toolbar>
