--- a/src/app/camera-files/camera-files.component.html
+++ b/src/app/camera-files/camera-files.component.html
@@ -3,14 +3,19 @@
     <ng-container matColumnDef="Image">
         <mat-header-cell *matHeaderCellDef> Image </mat-header-cell>
         <mat-cell class='image-cell' *matCellDef="let cameraFile; let idx=index"><img  
-          [style.display]="cameraFileImages[idx] ? 'block' : 'none'"
-          [src]="cameraFileImages[idx]"></mat-cell>
+          [style.display]="cameraFileImages[(paginator.pageIndex * paginator.pageSize) + idx] ? 'block' : 'none'"
+          [src]="cameraFileImages[(paginator.pageIndex * paginator.pageSize) + idx]"></mat-cell>
     </ng-container>
     <ng-container matColumnDef="Date">
         <mat-header-cell *matHeaderCellDef> Date </mat-header-cell>
-        <mat-cell *matCellDef="let cameraFile"><div><b>{{ cameraFile.CreateTime | date}}</b></div>
-          <div>{{ cameraFile.CreateTime | date:'mediumTime'}} - {{ cameraFile.Date | date:'mediumTime'}}</div></mat-cell>
+        <mat-cell *matCellDef="let cameraFile"><div><b>{{ cameraFile.Name}}</b></div>
+          <div><b>{{ cameraFile.CreateTime | date}}</b> {{ cameraFile.Date | date:'mediumTime'}}</div></mat-cell>
     </ng-container>
     <mat-row class="camera-row" (click)="openVideo(cameraFile)" *matRowDef="let cameraFile; columns: displayedColumns;"></mat-row>
 </mat-table>      
+<mat-paginator #paginator
+  [pageSize]="10"
+  [pageSizeOptions]="[5, 10, 20]"
+  [showFirstLastButtons]="true">
+</mat-paginator>
 </div>
