--- a/src/app/camera-video/camera-video.component.html
+++ b/src/app/camera-video/camera-video.component.html
@@ -1,6 +1,5 @@
-<div mat-dialog-title>{{data.name}}</div>
 <mat-dialog-content>
   <div class="video_container">
-  <video [src]="videoUrl" width="100%" autoplay controls></video>
+  <video [src]="videoUrl" height="90%" width="100%" autoplay controls></video>
 </div>  
 </mat-dialog-content>
